Fix carousel spacing

--- a/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
+++ b/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
@@ -36,7 +36,7 @@
 }
 
 .carousel-padding {
-  padding: 0 210px;
+  padding: 0 200px 0 210px;
 }
 
 .carousel-container.react-multi-carousel-list {
@@ -44,7 +44,7 @@
 }
 
 .carousel-container .react-multi-carousel-track {
-  padding-left: 30px;
+  padding-left: 0.75vw;
 }
 
 @media only screen and (max-width: 800px) {
@@ -85,7 +85,7 @@
 
 @media only screen and (min-width: 800px) and (max-width: 900px) {
   .carousel-padding {
-    padding: 0 210px;
+    padding: 0 260px;
   }
 
   .carousel-container .react-multi-carousel-track {
@@ -96,5 +96,11 @@
 @media only screen and (min-width: 600px) and (max-width: 800px) {
   .carousel-padding {
     padding: 0 120px;
+  }
+}
+
+@media only screen and (min-width: 1700px) {
+  .carousel-padding {
+    padding: 0 210px 0 230px;
   }
 }
